[package]
name = "uno"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
axum = "0.8.3"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tower = "0.5.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"

[dev-dependencies]
tempfile = "3.8"
